--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
     </footer>
   </main>
 
+  <!-- Template -->
   <template id="itemTemplate">
-    <div class="col-12">
+    <div class="col-12 item-col">
       <div class="card item-card">
         <div class="card-body d-flex align-items-start justify-content-between gap-3">
           <div class="flex-grow-1">
@@ -73,6 +74,34 @@
     </div>
   </template>
 
+  <!-- Edit Modal -->
+  <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">編輯條目</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-2">
+            <label class="form-label">內容</label>
+            <textarea id="editText" class="form-control" rows="4"></textarea>
+          </div>
+          <div class="mb-2">
+            <label class="form-label">標籤（用逗號 , 分隔）</label>
+            <input id="editTags" class="form-control form-control-sm" placeholder="tag1, tag2">
+          </div>
+          <input type="hidden" id="editItemId">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+          <button id="saveEditBtn" type="button" class="btn btn-primary">儲存變更</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
