--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Copy Board — 常用語收藏</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
-  <nav class="navbar navbar-dark bg-primary mb-3">
+<body class="bg-soft">
+
+  <nav class="navbar custom-navbar mb-3">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Copy Board</span>
-      <div>
-        <button id="exportBtn" class="btn btn-outline-light btn-sm me-2">匯出 JSON</button>
+      <a class="navbar-brand mb-0 h1 d-flex align-items-center gap-2" href="#">
+        <span class="brand-icon">🌸</span>
+        <span class="brand-text">Copy Board</span>
+      </a>
+      <div class="d-flex align-items-center gap-2">
+        <button id="exportBtn" class="btn btn-outline-light btn-sm">匯出 JSON</button>
         <label class="btn btn-outline-light btn-sm mb-0">
           匯入 JSON <input id="importFile" type="file" accept=".json" hidden>
         </label>
@@ -21,9 +29,9 @@
   </nav>
 
   <main class="container">
-    <div class="row mb-3">
+    <div class="row mb-3 align-items-center">
       <div class="col-md-8">
-        <input id="searchInput" type="search" class="form-control" placeholder="搜尋（輸入文字或標籤）">
+        <input id="searchInput" type="search" class="form-control form-control-lg" placeholder="搜尋（輸入文字或標籤）">
       </div>
       <div class="col-md-4 text-md-end mt-2 mt-md-0">
         <button id="clearAllBtn" class="btn btn-outline-danger btn-sm">清除所有</button>
@@ -31,22 +39,23 @@
     </div>
 
     <div class="row mb-3">
-      <div class="col-md-12">
-        <div class="card p-3">
+      <div class="col-12">
+        <div class="card p-3 add-card">
           <div class="mb-2">
             <label class="form-label mb-1"><strong>新增常用語</strong></label>
             <textarea id="newText" class="form-control" rows="2" placeholder="貼上或輸入要儲存的文字"></textarea>
           </div>
           <div class="mb-2 d-flex gap-2">
             <input id="newTags" class="form-control form-control-sm" placeholder="標籤（用逗號 , 分隔，選填）">
-            <button id="addBtn" class="btn btn-primary btn-sm">新增</button>
+            <button id="addBtn" class="btn btn-pink btn-sm">新增</button>
           </div>
           <div class="text-muted small">提示：點擊「複製」會把文字放到剪貼簿並短暫顯示已複製提示。</div>
         </div>
       </div>
     </div>
 
-    <div id="items" class="row gy-2">
+    <!-- items: two-column on md+, single column on small -->
+    <div id="items" class="row gy-3">
       <!-- items rendered here -->
     </div>
 
@@ -55,13 +64,13 @@
     </footer>
   </main>
 
-  <!-- Template -->
+  <!-- Template: change to two-column on md+ -->
   <template id="itemTemplate">
-    <div class="col-12 item-col">
+    <div class="col-12 col-md-6 item-col">
       <div class="card item-card">
         <div class="card-body d-flex align-items-start justify-content-between gap-3">
           <div class="flex-grow-1">
-            <p class="mb-1 item-text"></p>
+            <p class="mb-2 item-text"></p>
             <div class="item-tags text-muted small"></div>
           </div>
           <div class="btn-group-vertical">
@@ -74,7 +83,7 @@
     </div>
   </template>
 
-  <!-- Edit Modal -->
+  <!-- Edit Modal (unchanged behaviour) -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
@@ -95,7 +104,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-          <button id="saveEditBtn" type="button" class="btn btn-primary">儲存變更</button>
+          <button id="saveEditBtn" type="button" class="btn btn-pink">儲存變更</button>
         </div>
       </div>
     </div>
