Add favorite button to item actions

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             <div class="item-tags text-muted small"></div>
           </div>
           <div class="btn-group-vertical">
+            <!-- favorite button (star) -->
+            <button class="btn favorite-btn btn-sm" title="收藏 / 取消收藏" aria-pressed="false">☆</button>
             <button class="btn btn-outline-secondary btn-sm copy-btn">複製</button>
             <button class="btn btn-outline-warning btn-sm edit-btn">修改</button>
             <button class="btn btn-outline-danger btn-sm delete-btn">刪除</button>
