--- a/index.html
+++ b/index.html
@@ -1,118 +1,57 @@
-<!doctype html>
+
+---
+
+## index.html
+
+```html
+<!DOCTYPE html>
 <html lang="zh-HK">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Copy Board — 常用語收藏</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>常用語 Copy Board</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-soft">
-
-  <nav class="navbar custom-navbar mb-3">
-    <div class="container-fluid">
-      <a class="navbar-brand mb-0 h1 d-flex align-items-center gap-2" href="#">
-        <span class="brand-icon">🌸</span>
-        <span class="brand-text">Copy Board</span>
-      </a>
-      <div class="d-flex align-items-center gap-2">
-        <button id="exportBtn" class="btn btn-outline-light btn-sm">匯出 JSON</button>
-        <label class="btn btn-outline-light btn-sm mb-0">
-          匯入 JSON <input id="importFile" type="file" accept=".json" hidden>
-        </label>
-      </div>
+<body>
+  <header class="container">
+    <h1>常用語 Copy Board</h1>
+    <div class="controls">
+      <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
+      <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
+      <button id="exportBtn" type="button" class="btn btn-primary">匯出 JSON</button>
+      <label class="btn btn-secondary">
+        匯入 JSON
+        <input id="importFileInput" type="file" accept="application/json" hidden>
+      </label>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">清空全部</button>
     </div>
-  </nav>
+  </header>
 
   <main class="container">
-    <div class="row mb-3 align-items-center">
-      <div class="col-md-8">
-        <input id="searchInput" type="search" class="form-control form-control-lg" placeholder="搜尋（輸入文字或標籤）">
+    <section>
+      <h2>新增詞條</h2>
+      <div class="add-form">
+        <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
+        <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
+        <button id="addBtn" type="button" class="btn btn-primary">新增</button>
       </div>
-      <div class="col-md-4 text-md-end mt-2 mt-md-0">
-        <button id="clearAllBtn" class="btn btn-outline-danger btn-sm">清除所有</button>
-      </div>
-    </div>
+    </section>
 
-    <div class="row mb-3">
-      <div class="col-12">
-        <div class="card p-3 add-card">
-          <div class="mb-2">
-            <label class="form-label mb-1"><strong>新增常用語</strong></label>
-            <textarea id="newText" class="form-control" rows="2" placeholder="貼上或輸入要儲存的文字"></textarea>
-          </div>
-          <div class="mb-2 d-flex gap-2">
-            <input id="newTags" class="form-control form-control-sm" placeholder="標籤（用逗號 , 分隔，選填）">
-            <button id="addBtn" class="btn btn-pink btn-sm">新增</button>
-          </div>
-          <div class="text-muted small">提示：點擊「複製」會把文字放到剪貼簿並短暫顯示已複製提示。</div>
-        </div>
-      </div>
-    </div>
+    <section>
+      <h2>標籤篩選</h2>
+      <div id="tagFilters" class="tag-filters"></div>
+    </section>
 
-    <!-- items: two-column on md+, single column on small -->
-    <div id="items" class="row gy-3">
-      <!-- items rendered here -->
-    </div>
-
-    <footer class="mt-4 text-center text-muted small">
-      Copy Board • 存於瀏覽器 localStorage • 可匯入/匯出 JSON 作備份
-    </footer>
+    <section>
+      <h2>詞條列表</h2>
+      <div id="itemsList" class="items"></div>
+    </section>
   </main>
 
-  <!-- Template: change to two-column on md+ -->
-  <template id="itemTemplate">
-    <div class="col-12 col-md-6 item-col">
-      <div class="card item-card">
-        <div class="card-body d-flex align-items-start justify-content-between gap-3">
-          <div class="flex-grow-1">
-            <p class="mb-2 item-text"></p>
-            <div class="item-tags text-muted small"></div>
-          </div>
-          <div class="btn-group-vertical">
-            <!-- favorite button (star) -->
-            <button class="btn favorite-btn btn-sm" title="收藏 / 取消收藏" aria-pressed="false">☆</button>
-            <button class="btn btn-outline-secondary btn-sm copy-btn">複製</button>
-            <button class="btn btn-outline-warning btn-sm edit-btn">修改</button>
-            <button class="btn btn-outline-danger btn-sm delete-btn">刪除</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </template>
+  <footer class="container footer">
+    <div class="text-muted small">資料儲存在瀏覽器的 LocalStorage。建議不定期匯出 JSON 以備份。</div>
+  </footer>
 
-  <!-- Edit Modal (unchanged behaviour) -->
-  <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">編輯條目</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
-        </div>
-        <div class="modal-body">
-          <div class="mb-2">
-            <label class="form-label">內容</label>
-            <textarea id="editText" class="form-control" rows="4"></textarea>
-          </div>
-          <div class="mb-2">
-            <label class="form-label">標籤（用逗號 , 分隔）</label>
-            <input id="editTags" class="form-control form-control-sm" placeholder="tag1, tag2">
-          </div>
-          <input type="hidden" id="editItemId">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-          <button id="saveEditBtn" type="button" class="btn btn-pink">儲存變更</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
