--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Working Copy Board</title>
+  <title>Work Copy Board</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,7 +43,7 @@
   </main>
 
   <footer class="container footer">
-    <div class="text-muted small">備份啊啊啊啊!!!!。</div>
+    <div class="text-muted small">備份啊啊啊啊啊啊啊!!!!</div>
   </footer>
 
   <script src="app.js"></script>
