--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="container">
-    <h1>常用語 Copy Board</h1>
+    <h1> Copy Board</h1>
     <div class="controls">
       <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
