--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
         匯入 JSON
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
-      <button id="clearAllBtn" type="button" class="btn btn-danger">清空全部</button>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">Clear All</button>
     </div>
   </header>
 
   <main class="container">
     <section>
-      <h2>新增詞條</h2>
+      <h2>New</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
-        <button id="addBtn" type="button" class="btn btn-primary">新增</button>
+        <button id="addBtn" type="button" class="btn btn-primary">NEW</button>
       </div>
     </section>
 
     <section>
-      <h2>標籤篩選</h2>
+      <h2>Tags</h2>
       <div id="tagFilters" class="tag-filters"></div>
     </section>
 
     <section>
-      <h2>詞條列表</h2>
+      <h2>❁´◡`❁</h2>
       <div id="itemsList" class="items"></div>
     </section>
   </main>
