--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="container">
     <section>
-      <h2>New</h2>
+      <h2>Add</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
