--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
+
+---
+
+## index.html
+
+```html
 <!DOCTYPE html>
 <html lang="zh-HK">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Work Copy Board</title>
+  <title>常用語 Copy Board</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="container">
-    <h1> Copy Board</h1>
+    <h1>常用語 Copy Board</h1>
     <div class="controls">
       <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
@@ -17,33 +23,33 @@
         匯入 JSON
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
-      <button id="clearAllBtn" type="button" class="btn btn-danger">Clear All</button>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">清空全部</button>
     </div>
   </header>
 
   <main class="container">
     <section>
-      <h2>Add</h2>
+      <h2>新增詞條</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
-        <button id="addBtn" type="button" class="btn btn-primary">NEW</button>
+        <button id="addBtn" type="button" class="btn btn-primary">新增</button>
       </div>
     </section>
 
     <section>
-      <h2>Tags</h2>
+      <h2>標籤篩選</h2>
       <div id="tagFilters" class="tag-filters"></div>
     </section>
 
     <section>
-      <h2>❁´◡`❁</h2>
+      <h2>詞條列表</h2>
       <div id="itemsList" class="items"></div>
     </section>
   </main>
 
   <footer class="container footer">
-    <div class="text-muted small">備份啊啊啊啊啊啊啊!!!!</div>
+    <div class="text-muted small">資料儲存在瀏覽器的 LocalStorage。建議不定期匯出 JSON 以備份。</div>
   </footer>
 
   <script src="app.js"></script>
