--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>常用語 Copy Board</title>
+  <title>Copy Board</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="container">
-    <h1>常用語 Copy Board</h1>
+    <h1>Wokring Hard</h1>
     <div class="controls">
       <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
-      <button id="exportBtn" type="button" class="btn btn-primary">匯出 JSON</button>
+      <button id="exportBtn" type="button" class="btn btn-primary">Backup</button>
       <label class="btn btn-secondary">
-        匯入 JSON
+        Input
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
       <button id="clearAllBtn" type="button" class="btn btn-danger">清空全部</button>
@@ -23,7 +23,7 @@
 
   <main class="container">
     <section>
-      <h2>新增詞條</h2>
+      <h2>New</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
