--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="container">
     <section>
-      <h2>New</h2>
+      <h2>New  BACK AR!!</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
@@ -54,9 +54,7 @@
   <title>備份提醒網頁</title>
 </head>
 <body>
-  <h1>我的Github網頁</h1>
-  <p>當你關閉呢個網頁時，會提醒你備份。</p>
-
+  
   <script>
     window.addEventListener("beforeunload", function (event) {
       // 阻止默認行為
