--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header class="container">
-    <h1>Search</h1>
+    <h1>Search, and BACKUP AR!!</h1>
     <div class="controls">
-      <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
+      <input id="searchInput" type="text" placeholder="正在尋找你的人生意義…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
       <button id="exportBtn" type="button" class="btn btn-primary">Backup</button>
       <label class="btn btn-secondary">
@@ -23,7 +23,7 @@
 
   <main class="container">
     <section>
-      <h2>New  BACK AR!!</h2>
+      <h2>New</h2>
       <div class="add-form">
         <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
