--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="container">
     <h1>Search, and BACKUP AR!!</h1>
     <div class="controls">
-      <input id="searchInput" type="text" placeholder="正在尋找你的人生意義…" aria-label="搜尋">
+      <input id="searchInput" type="text" placeholder="請尋找你的人生意義…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
       <button id="exportBtn" type="button" class="btn btn-primary">Backup</button>
       <label class="btn btn-secondary">
@@ -43,7 +43,7 @@
   </main>
 
   <footer class="container footer">
-    <div class="text-muted small">資料儲存在瀏覽器的 LocalStorage。建議不定期匯出 JSON 以備份。</div>
+    <div class="text-muted small">請記得output backup，不過應該睇唔到呢段字ಠ⁠_⁠ಠ</div>
   </footer>
 
   <script src="app.js"></script>
