--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="container">
-    <h1>Search, and BACKUP AR!!</h1>
+    <h1>BACKUP AR!!</h1>
     <div class="controls">
       <input id="searchInput" type="text" placeholder="請尋找你的人生意義…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
@@ -17,7 +17,7 @@
         Input
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
-      <button id="clearAllBtn" type="button" class="btn btn-danger">Clear All</button>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">!!Danger Clear all data!!</button>
     </div>
   </header>
 
@@ -25,14 +25,14 @@
     <section>
       <h2>New</h2>
       <div class="add-form">
-        <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
+        <input id="newTextInput" type="text" placeholder="輸入新的牛馬用語…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
         <button id="addBtn" type="button" class="btn btn-primary">ADD</button>
       </div>
     </section>
 
     <section>
-      <h2>TAGS</h2>
+      <h2>Tags</h2>
       <div id="tagFilters" class="tag-filters"></div>
     </section>
 
