--- a/index.html
+++ b/index.html
@@ -25,5 +25,4 @@
     <section>
       <h2>New</h2>
       <div class="add-form">
-        <!-- 改成 textarea 支援分行 -->
-        <textarea id="newTextInput" placeholder="輸入新的牛馬用語…" aria-label="文字" rows="4"></textarea>
+        <input id="newTextInput" type="text" placeholder="輸入新的牛馬用語…" aria-label="文字">
