--- a/index.html
+++ b/index.html
@@ -3,26 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Copyboard</title>
+  <title>Work Copy Board</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="container">
-    <h1>BACKUP AR!!</h1>
+    <h1> Copy Board</h1>
     <div class="controls">
-      <input id="searchInput" type="text" placeholder="請尋找你的人生意義…" aria-label="搜尋">
+      <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
-      <button id="exportBtn" type="button" class="btn btn-primary">Backup</button>
+      <button id="exportBtn" type="button" class="btn btn-primary">匯出 JSON</button>
       <label class="btn btn-secondary">
-        Input
+        匯入 JSON
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
-      <button id="clearAllBtn" type="button" class="btn btn-danger">!!Danger Clear all data!!</button>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">Clear All</button>
     </div>
   </header>
 
   <main class="container">
     <section>
-      <h2>New</h2>
+      <h2>Add</h2>
       <div class="add-form">
-        <input id="newTextInput" type="text" placeholder="輸入新的牛馬用語…" aria-label="文字">
+        <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
+        <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
+        <button id="addBtn" type="button" class="btn btn-primary">NEW</button>
+      </div>
+    </section>
+
+    <section>
+      <h2>Tags</h2>
+      <div id="tagFilters" class="tag-filters"></div>
+    </section>
+
+    <section>
+      <h2>❁´◡`❁</h2>
+      <div id="itemsList" class="items"></div>
+    </section>
+  </main>
+
+  <footer class="container footer">
+    <div class="text-muted small">備份啊啊啊啊啊啊啊!!!!</div>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
+</html>
