--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <header class="container">
-    <h1> Copy Board</h1>
+    <h1> Search, and BACK UP!!</h1>
     <div class="controls">
-      <input id="searchInput" type="text" placeholder="搜尋文字或標籤…" aria-label="搜尋">
+      <input id="searchInput" type="text" placeholder="正在搜尋你的人生意義……" aria-label="搜尋">
       <button id="togglePinnedFirstBtn" type="button" class="btn">置頂優先：開</button>
-      <button id="exportBtn" type="button" class="btn btn-primary">匯出 JSON</button>
+      <button id="exportBtn" type="button" class="btn btn-primary">BACK UP</button>
       <label class="btn btn-secondary">
-        匯入 JSON
+        INPUT
         <input id="importFileInput" type="file" accept="application/json" hidden>
       </label>
-      <button id="clearAllBtn" type="button" class="btn btn-danger">Clear All</button>
+      <button id="clearAllBtn" type="button" class="btn btn-danger">DANGER!!!Clear All Data</button>
     </div>
   </header>
 
@@ -25,7 +25,7 @@
     <section>
       <h2>Add</h2>
       <div class="add-form">
-        <input id="newTextInput" type="text" placeholder="輸入要複製的文字…" aria-label="文字">
+        <input id="newTextInput" type="text" placeholder="輸入新的社畜用語…" aria-label="文字">
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
         <button id="addBtn" type="button" class="btn btn-primary">NEW</button>
       </div>
@@ -37,7 +37,7 @@
     </section>
 
     <section>
-      <h2>❁´◡`❁</h2>
+      <h2>Copyboard</h2>
       <div id="itemsList" class="items"></div>
     </section>
   </main>
