--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     </div>
   </header>
 
-  <main class="container">
+ <main class="container">
     <section>
-      <h2>Add</h2>
+      <h2>New</h2>
       <div class="add-form">
-        <input id="newTextInput" type="text" placeholder="輸入新的社畜用語…" aria-label="文字">
+        <!-- 改成 textarea 支援分行 -->
+        <textarea id="newTextInput" placeholder="輸入新的社畜用語…" aria-label="文字" rows="4"></textarea>
         <input id="newTagsInput" type="text" placeholder="標籤（用逗號分隔，例如：工作,回覆）" aria-label="標籤">
-        <button id="addBtn" type="button" class="btn btn-primary">NEW</button>
+        <button id="addBtn" type="button" class="btn btn-primary">ADD</button>
       </div>
     </section>
 
